Resolves: fdo#37044 two different TransliterationChgData structs

There are two structs called TransliterationChgData with different
layout. The crashes on MacOSX must be due to this. Rename them
so they've different names.

Change-Id: I887a33bed26b339e229b7fb1ef8dddd192f6fae3